		* Scene.onFadeEnd(DrawableObject)
		* Scene.onMoveEnd(DimensionalObject)
		* DimensionalObject.scaleFromCentre - scales from the centre point, speed (setSpeedX, setSpeedY) also affects this central point
		* Scene.onTouchCustom override and return true to implement your own touch handling routines (return true to ignore Rokon internals)
		* DrawableObject.stopAnimation()
		
	Changes
		* The MotionEvent stuff has changed, again. An issue arose with using the threading system, and queuing up MotionEvents to be processed.
			When a second MotionEvent was added to the queue, Android uses the same MotionEvent object - so essentially destroys the first. This
			means holding on to MotionEvent's is pointless, and to prevent creating garbage, we're just using floats and ints and things again
			now. This might be a pain for some people who wanted to use the pressure stuff, but, this is for the greater good. I'm sure you'll
			be able to find a workaround if you really need that feature :P
	
	Bug Fixes
		* Fixed bug with DrawableObject.fade

09/07/2010 2.0.3
	New Features
		* Drawable now has onTouch events within itself
		* DrawableObject.getParentLayer() fetches the current Layer
		* Scene.toastLong and Scene.toastShort are helpers for showing Toast messages
		* Drawable.setZ, Drawable.getZ - for use with new DrawOrder.Z_ORDER
		* Drawable.getRotation() fetches rotation, forces override
		* MathHelper.pointInShape - determines whether a point is inside a Sprites shape/polygon
		* Preferences class, just a helper for SharedPreferences
		* Sprite.clearModifiers() clears all current modifiers
		* RokonActivity.setGameSize(width, height, force) Can force width/height to remain as given, setGameSize(width, height) now assumes fixed aspect and adjusts
		* Scene has a couple of abstract methods that must be overriden, onReady onResume onPause
		* Vibrator now has an enable() and disable(), to prevent the phone from being vibrated. The default state, is enabled