@@ -9,6 +9,7 @@
 		* DimensionalObject.scaleFromCentre - scales from the centre point, speed (setSpeedX, setSpeedY) also affects this central point
 		* Scene.onTouchCustom override and return true to implement your own touch handling routines (return true to ignore Rokon internals)
 		* DrawableObject.stopAnimation()
+		* Texture.minFilter, magFilter, wrapS, wrapT & envMode - allow modification of parameters when loading textures, change only if you know how
 		
 	Changes
 		* The MotionEvent stuff has changed, again. An issue arose with using the threading system, and queuing up MotionEvents to be processed.
@@ -16,6 +17,7 @@
 			means holding on to MotionEvent's is pointless, and to prevent creating garbage, we're just using floats and ints and things again
 			now. This might be a pain for some people who wanted to use the pressure stuff, but, this is for the greater good. I'm sure you'll
 			be able to find a workaround if you really need that feature :P
+		* Sprite.accelerate(acceleration, angle) and setVelocity(velocity, angle) now take degrees, not radians
 	
 	Bug Fixes
 		* Fixed bug with DrawableObject.fade
